...
        android:text="Untitled"
        android:textColor="#630000"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <com.example.colorfall.drawView
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />


    <TextView
        android:id="@+id/current_size"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:baselineAligned="false"
        android:fontFamily="casual"
        android:text="Brush Size: 70"
        android:textColor="#630000"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:background="#DFC290"
...
            android:background="#00FFFFFF"
            android:contentDescription="paint"
            android:src="@drawable/paintbucket"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/eraser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/colorPicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
...
            android:paddingTop="5dp"
            android:src="@drawable/save_file"
            tools:ignore="HardcodedText" />


        <ImageButton
            android:id="@+id/delete_canvas"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="TODO"
            android:paddingTop="10dp"
            android:src="@drawable/delete_canvas"
...
