...
    <string name="title_activity_import">importActivity</string>
    <string name="title_activity_templates">TemplatesActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="erase">erase</string>
    <string name="save">save</string>
    <string name="pixel_pen">pixel_pen</string>
    <string name="add_grid">add_grid</string>
    <string name="save_file">save_file</string>
    <string name="pixel">pixel</string>
    <string name="colorPicker">colorPicker</string>
    <string name="sml">sml</string>

</resources>

